[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
position = Vector2( 24, 80 )
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 54.0
margin_top = -16.0
margin_right = 248.0
margin_bottom = 8.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 54.0
margin_top = 40.0
margin_right = 252.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 38.0
margin_bottom = 30.0
text = "Vitor"

[node name="Button" type="Button" parent="."]
margin_left = 29.0
margin_top = 98.0
margin_right = 80.0
margin_bottom = 118.0

[node name="Button2" type="Button" parent="."]
margin_left = 112.0
margin_top = 98.0
margin_right = 164.0
margin_bottom = 120.0

[node name="Button3" type="Button" parent="."]
margin_left = 200.0
margin_top = 98.0
margin_right = 252.0
margin_bottom = 120.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
